Mar 17, 2007 - chris
o added configure-option --enable-internal to enable all internal 
    functions (ham_dump and ham_check_integrity). disabling those functions
    shrinks the library size by a few kilobytes
o improved the documentation in the header-files

Mar 16, 2007 - chris
o improved configure.in - added --enable-shrink, removed optimizations 
    for --enable-debug, all other modes will now use -O3

Mar 06, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.1

Mar 04, 2007
o moved the ./tests-subdirectory to a separate repository

Mar 03, 2007
o win32 compiles and links as a static or dynamic library with Visual C++ 
    2005 Express Edition; testes are all successful

Feb 11, 2007
o many small changes to compile everything on cygwin

Feb 04, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.0

Feb 03, 2007 - chris
o all write-functions return an error if they're called but the 
    database is in read-only mode
o added a new sample db3.c, which reads words from stdin and prints them 
    in sorted order
o removed the flag HAM_OPEN_CREATE; it was broken anyway

Feb 02, 2007 - chris
o database cursors are now fully implemented and tested

Jan 24, 2007 - chris
o default behaviour for ham_create changed; already existing files are now
    overwritten
o now uses -Wall on platforms with gcc
o resized the default cache size from 128kb to 256kb

Jan 23, 2007 - chris
o added a new sample db2.c, which copies an existing database to another
    database using a cursor.

Jan 21, 2007 - chris
o the cursor implementation is finished and seems to work; testing is not 
    yet complete. 
o ham_flush now has an (unused) flags-parameter.
o renamed samples/simple.c to samples/db1.c

Jan 20, 2007 - chris
o created one global transaction-pointer in the database object, and 
    removed all transaction parameters for most functions; added tests that 